modified req.txt file

--- a/Data_extraction.ipynb
+++ b/Data_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:Initialized SeleniumUtils with download_dir: /Users/admin/Desktop/stock_project\n",
+      "INFO:__main__:Found Chrome at: /Applications/Google Chrome.app/Contents/MacOS/Google Chrome\n",
+      "INFO:WDM:====== WebDriver manager ======\n",
+      "INFO:WDM:Get LATEST chromedriver version for google-chrome\n",
+      "INFO:WDM:Get LATEST chromedriver version for google-chrome\n",
+      "INFO:WDM:Driver [/Users/admin/.wdm/drivers/chromedriver/mac64/138.0.7204.35/chromedriver-mac-arm64/chromedriver] found in cache\n",
+      "INFO:__main__:Initialized SeleniumUtils with download_dir: /Users/admin/Desktop/stock_project\n",
+      "INFO:__main__:Found Chrome at: /Applications/Google Chrome.app/Contents/MacOS/Google Chrome\n",
+      "INFO:__main__:Using Chrome binary: /Applications/Google Chrome.app/Contents/MacOS/Google Chrome\n",
+      "INFO:WDM:====== WebDriver manager ======\n",
+      "INFO:WDM:Get LATEST chromedriver version for google-chrome\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Chrome Installation Diagnosis ===\n",
+      "Operating System: Darwin\n",
+      "Architecture: 64bit\n",
+      "Chrome Found: True\n",
+      "Chrome Path: /Applications/Google Chrome.app/Contents/MacOS/Google Chrome\n",
+      "ChromeDriver Available: True\n",
+      "ChromeDriver Path: /Users/admin/.wdm/drivers/chromedriver/mac64/138.0.7204.35/chromedriver-mac-arm64/chromedriver\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:WDM:Get LATEST chromedriver version for google-chrome\n",
+      "INFO:WDM:Driver [/Users/admin/.wdm/drivers/chromedriver/mac64/138.0.7204.35/chromedriver-mac-arm64/chromedriver] found in cache\n",
+      "INFO:__main__:Chrome driver created with automatic ChromeDriver management\n",
+      "INFO:__main__:Chrome driver created successfully\n",
+      "INFO:__main__:Successfully obtained 8 cookies from https://www.nseindia.com/\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got cookies: _abck=306639163E31E86030E4F1A02B97B3A6~-1~YAAQj88uF990sGOXAQAAB79RmQ6gJhdciAxDLFf1Bd7Npw8tiPFvn6gRgO...\n"
+     ]
+    }
+   ],
    "source": [
     "with open('selenium_utils.py') as f:\n",
     "    code = f.read()\n",
